fix: navbar spacing

--- a/public/css/NavBar.css
+++ b/public/css/NavBar.css
@@ -52,7 +52,7 @@
 
     width: 300px;
 
-    margin-right: 20px;
+    margin: 0 20px;
 
     border: none;
     border-radius: 15px;
@@ -68,6 +68,8 @@
 }
 
 .logout {
+    flex: none;
+
     text-decoration: none;
     color: #FF4E4E;
 }
